NoiseChisel & Statistics: improved outlier rejection in Sky
Until now, once the detection was done, the tiles that weren't
significantly covered by detections (based on '--minskyfrac') would be
directly used for the interpolation phase: there was no outlier rejection
beyond the median-based interpolation. Also, when removing outliers during
the finding of the quantile threshold, we were using global measures to
find and reject outliers. So it wouldn't opeate too well when there were
strong gradients for example.

With this commit, to find outliers in the quantile threshold, we now
calculate the distance between the second-smallest and second-largest
values in the '--interpnumngb' tiles around it. This allows for a more
local rejection of some tiles. This is done in the newly added
'gal_tileinternal_no_outlier_local' funciton. We then look at the
distribution of those values to find outliers. Also, outlier rejection is
now also implemented on the final Sky image.

In the process, some other issues have been fixed:

 - While looking at previous code to remember the low-level implementation
   details, I noticed that the lines are longer than 75 characters, making
   the functions hard to read.

 - The internal 'INTERPOLATE_FLAGS_CHECKED' macro in 'lib/interpolate.c'
   was renamed to 'INTERPOLATE_FLAGS_NGB_CHECKED' to be more clear. When
   reviewing the code, initially I mistakenly thought it was the fact that
   a pixel is checked or not. But it was actually a check to see if the
   pixel has been checked during the search to find the nearest neighbor.

 - In the 'gal_statistics_quantile_function_index' function, I noticed that
   we weren't accounting for cases where the lowest two elements have the
   same value (to see if the array is sorted in increasing or decreasing
   order). As a result, some results were being mistakenly returned as
   'inf'. With this commit, we are now using the relevant flag that
   explicitly keeps this information.

 - Added sanity che

--- a/NEWS
+++ b/NEWS
@@ -131,11 +131,24 @@ See the end of the file for license conditions.
      (which can dramatically slow down the program). Please see the newly
      added "Memory management" section of the book for a complete
      explanation of Gnuastro's new memory management strategy.
+   --interpnumngb: the default value has been increased to 15 (from 9). The
+     reason for this is that we now have a more robust outlier removal
+     algorithm (see description under "NoiseChisel & Statistics").
 
   Fits:
    - The '--pixelscale' option also prints the pixel area (for 2D inputs,
      or 2D slices of 3D inputs) and the voxel volume (for 3D inputs). Until
      now, it would only print the pixel scale along each dimension.
+
+  NoiseChisel & Statistics:
+   - New algorithm used to reject outlying tiles. In NoiseChisel this is
+     done when estimating the quantile threshold, the pseudo-detection
+     threshold and the final Sky value. In Statistics, its just the Sky
+     value. Unlike the previous method that used the global distribution of
+     tile values to identify outliers, the new algorithm uses a relative
+     measure. See the book for more. Since outliers are now rejected more
+     robustly, the default value of 'outliersigma' has been decreased to
+     '5' (previously it was 10).
 
   Table:
    - Column arithmetic operators 'degree-to-ra' and 'degree-to-dec' will
