--- a/NEWS
+++ b/NEWS
@@ -174,6 +174,7 @@ See the end of the file for license conditions.
   bug #59155: Match cannot find the proper row when coordinates have NaN.
   bug #59371: MakeCatalog crash with clumps on non-contiguous object labels.
   bug #59400: CosmicCalculator fails --printparams when redshift isn't given.
+  bug #59459: Unclear WCS when both PC and CD exist in input, but conflict.
 
 
 
