MakeProfiles: ignore --kernel option when already given
Until now, if the '--kernel' option was called more than once, the last
instance would be used, not the first (as expected by Gnuastro's option
precedence). I also noticed that there is no sanity check on numbers given
after the profile name. So for example if the user mistakenly gave
'--kernel=kernel.fits' (like other programs), it would give a segmentation
fault.

With this commit after the first instance of '--kernel' has been
interpretted, any later instance will be ignored. Also, if nothing is given
after the main string, an error will be printed.

This fixes bug #59625.

--- a/NEWS
+++ b/NEWS
@@ -175,6 +175,7 @@ See the end of the file for license conditions.
   bug #59371: MakeCatalog crash with clumps on non-contiguous object labels.
   bug #59400: CosmicCalculator fails --printparams when redshift isn't given.
   bug #59459: Unclear WCS when both PC and CD exist in input, but conflict.
+  bug #59625: MakeProfiles uses last --kernel, if it is called more than once.
 
 
 
